--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
-    container: ghcr.io/smkwlab/alpine-texlive-ja-textlint:latest
+    container: ghcr.io/smkwlab/texlive-ja-textlint:2023c-alpine
     steps:
       - name: Checkout git repo
         uses: actions/checkout@v4
