--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
       - name: Setup LaTeX
         run: |
           sudo apt-get update
@@ -30,6 +33,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
       - name: Setup LaTeX
         run: |
           sudo apt-get update
@@ -49,6 +55,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
       - name: Setup LaTeX
         run: |
           sudo apt-get update
@@ -68,6 +77,9 @@ jobs:
       contents: write
     continue-on-error: true
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
       - name: Setup LaTeX
         run: |
           sudo apt-get update
