fix: allow slash in file names for subdirectory support
The regex pattern was too restrictive and rejected 'test/sample' which is
a valid file path. Updated pattern to include slash for subdirectory support.

--- a/action.yml
+++ b/action.yml
@@ -50,8 +50,8 @@ runs:
           fi
           
           # Sanitize file name (remove potentially dangerous characters)
-          if [[ ! "$file" =~ ^[a-zA-Z0-9_-]+$ ]]; then
-            echo "::error::Invalid file name: $file (only alphanumeric, underscore, and hyphen allowed)"
+          if [[ ! "$file" =~ ^[a-zA-Z0-9_/-]+$ ]]; then
+            echo "::error::Invalid file name: $file (only alphanumeric, underscore, hyphen, and slash allowed)"
             exit 1
           fi
           
