--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,16 +10,12 @@ on:
 jobs:
   test-single-file:
     runs-on: ubuntu-latest
+    container: ghcr.io/smkwlab/texlive-ja-textlint:2023c-alpine
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-latex-base texlive-latex-extra latexmk
       
       - name: Test single file build
         uses: ./
@@ -30,16 +26,12 @@ jobs:
 
   test-multiple-files:
     runs-on: ubuntu-latest
+    container: ghcr.io/smkwlab/texlive-ja-textlint:2023c-alpine
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-latex-base texlive-latex-extra latexmk
       
       - name: Test multiple files build
         uses: ./
@@ -52,16 +44,12 @@ jobs:
 
   test-sequential-build:
     runs-on: ubuntu-latest
+    container: ghcr.io/smkwlab/texlive-ja-textlint:2023c-alpine
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-latex-base texlive-latex-extra latexmk
       
       - name: Test sequential build
         uses: ./
@@ -73,17 +61,13 @@ jobs:
 
   test-error-handling:
     runs-on: ubuntu-latest
+    container: ghcr.io/smkwlab/texlive-ja-textlint:2023c-alpine
     permissions:
       contents: write
     continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-latex-base texlive-latex-extra latexmk
       
       - name: Test with non-existent file
         uses: ./
