fix: respect .latexmkrc configuration instead of forcing pdflatex
Remove -pdf from default latex_options to allow .latexmkrc files
in user repositories to control LaTeX compilation (e.g., uplatex + dvipdfmx for Japanese documents).
Users can still explicitly set -pdf via latex_options parameter if needed.

--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   latex_options:
     description: 'Additional latexmk options'
     required: false
-    default: '-pdf -interaction=nonstopmode'
+    default: '-interaction=nonstopmode'
   release_name:
     description: 'Custom release name (optional)'
     required: false
