--- a/action.yml
+++ b/action.yml
@@ -30,14 +30,16 @@ runs:
       run: |
         # Check if we can write to the temp directory, fix permissions if needed
         # This prevents EACCES errors when running in containers with non-root users
-        TEMP_DIR="/__w/_temp"
+        # Use RUNNER_TEMP if available, otherwise fall back to standard path
+        TEMP_DIR="${RUNNER_TEMP:-/__w/_temp}"
         if [ -d "$TEMP_DIR" ]; then
           TEST_FILE="$TEMP_DIR/.write_test_$$"
           if ! touch "$TEST_FILE" 2>/dev/null; then
             echo "Write permission issue detected, attempting to fix..."
-            chmod -R 777 "$TEMP_DIR" 2>/dev/null || sudo chmod -R 777 "$TEMP_DIR" 2>/dev/null || true
+            # Use chmod a+w (add write for all) instead of 777 for security
+            chmod -R a+w "$TEMP_DIR" 2>/dev/null || sudo chmod -R a+w "$TEMP_DIR" 2>/dev/null || true
             if touch "$TEST_FILE" 2>/dev/null; then
-              echo "✓ Permissions fixed successfully"
+              echo "Permissions fixed successfully"
               rm -f "$TEST_FILE"
             else
               echo "::warning::Could not fix permissions, but will attempt to continue"
