--- a/action.yml
+++ b/action.yml
@@ -22,244 +22,15 @@ inputs:
     required: false
     default: 'false'
 
+outputs:
+  pdf_files:
+    description: 'Comma-separated list of generated PDF files'
+  all_exist:
+    description: 'Whether all expected PDF files were generated'
+  processed_files:
+    description: 'Comma-separated list of processed LaTeX files'
+
 runs:
-  using: "composite"
-  steps:
-    - name: Checkout git repo
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.head.sha || github.ref }}
-
-    - name: Prepare file list
-      id: prepare
-      shell: bash
-      run: |
-        echo "::group::Preparing file list"
-        echo "Input files: ${{ inputs.files }}"
-
-        # Convert comma-separated list to array and trim whitespace
-        IFS=',' read -ra TEX_FILES <<< "${{ inputs.files }}"
-        # Check file existence and build list of existing files only
-        FILES_TO_CHECK=""
-        PROCESSED_FILES=""
-        SKIPPED_FILES=""
-
-        for file in "${TEX_FILES[@]}"; do
-          file=$(echo $file | xargs)  # trim whitespace
-          if [[ -z "$file" ]]; then
-            echo "::warning::Empty file name found in input, skipping"
-            continue
-          fi
-
-          # Sanitize file name (remove potentially dangerous characters)
-          if [[ ! "$file" =~ ^[a-zA-Z0-9_/-]+$ ]]; then
-            echo "::error::Invalid file name: $file (only alphanumeric, underscore, hyphen, and slash allowed)"
-            exit 1
-          fi
-
-          # Check if the .tex file exists
-          if [[ -f "$file.tex" ]]; then
-            FILES_TO_CHECK+="$file.tex,"
-            PROCESSED_FILES+="$file,"
-            echo "✓ Found file: $file.tex"
-          else
-            SKIPPED_FILES+="$file.tex,"
-            echo "⚠ Skipping missing file: $file.tex"
-          fi
-        done
-
-        FILES_TO_CHECK=${FILES_TO_CHECK%,}  # remove trailing comma
-        PROCESSED_FILES=${PROCESSED_FILES%,}  # remove trailing comma
-        SKIPPED_FILES=${SKIPPED_FILES%,}  # remove trailing comma
-
-        if [[ -z "$FILES_TO_CHECK" ]]; then
-          echo "::warning::No valid LaTeX files found to build. All specified files are missing:"
-          if [[ -n "$SKIPPED_FILES" ]]; then
-            echo "Missing files: $SKIPPED_FILES"
-          fi
-          echo "existing_files=false" >> $GITHUB_OUTPUT
-          echo "::endgroup::"
-          exit 0
-        fi
-
-        echo "Files to build: $FILES_TO_CHECK"
-        if [[ -n "$SKIPPED_FILES" ]]; then
-          echo "Skipped files: $SKIPPED_FILES"
-        fi
-        echo "tex_files=${FILES_TO_CHECK}" >> $GITHUB_OUTPUT
-        echo "processed_files=${PROCESSED_FILES}" >> $GITHUB_OUTPUT
-        echo "existing_files=true" >> $GITHUB_OUTPUT
-        echo "::endgroup::"
-
-    - name: Check tex files existence
-      id: check_src
-      if: steps.prepare.outputs.existing_files == 'true'
-      uses: andstor/file-existence-action@v3
-      with:
-        files: ${{ steps.prepare.outputs.tex_files }}
-
-    - name: Build PDF files by latexmk
-      if: steps.prepare.outputs.existing_files == 'true'
-      shell: bash
-      run: |
-        echo "::group::Building LaTeX files"
-        echo "LaTeX options: ${{ inputs.latex_options }}"
-        echo "Parallel build: ${{ inputs.parallel }}"
-
-        IFS=',' read -ra TEX_FILES <<< "${{ steps.prepare.outputs.processed_files }}"
-        BUILD_FAILED=false
-
-        if [[ "${{ inputs.parallel }}" == "true" ]]; then
-          echo "Building files in parallel..."
-          pids=()
-          temp_dir=$(mktemp -d)
-          echo "Using temporary directory: $temp_dir"
-
-          for file in "${TEX_FILES[@]}"; do
-            file=$(echo $file | xargs)
-            # Sanitize filename for use in temp file names
-            safe_name=$(echo "$file" | tr '/' '_')
-            echo "Starting build for: $file.tex"
-            (
-              if latexmk ${{ inputs.latex_options }} "$file.tex" 2>&1; then
-                echo "0" > "$temp_dir/exit_$safe_name"
-                echo "✓ Successfully built $file.tex"
-              else
-                echo "1" > "$temp_dir/exit_$safe_name"
-                echo "::error::Failed to build $file.tex"
-                exit 1
-              fi
-            ) &
-            pids+=($!)
-          done
-
-          # Wait for all builds to complete and collect results
-          overall_success=true
-          for i in "${!pids[@]}"; do
-            pid=${pids[$i]}
-            file=$(echo "${TEX_FILES[$i]}" | xargs)
-            safe_name=$(echo "$file" | tr '/' '_')
-
-            if wait $pid; then
-              echo "Process for $file.tex completed successfully"
-            else
-              echo "Process for $file.tex failed"
-              overall_success=false
-            fi
-
-            # Double-check with exit code file
-            if [[ -f "$temp_dir/exit_$safe_name" ]]; then
-              exit_code=$(cat "$temp_dir/exit_$safe_name")
-              if [[ "$exit_code" != "0" ]]; then
-                echo "::error::Build failed for $file.tex (exit code: $exit_code)"
-                overall_success=false
-              fi
-            else
-              echo "::warning::No exit code file found for $file.tex"
-              overall_success=false
-            fi
-          done
-
-          # Cleanup temporary directory
-          rm -rf "$temp_dir"
-
-          if [[ "$overall_success" != "true" ]]; then
-            BUILD_FAILED=true
-          fi
-        else
-          echo "Building files sequentially..."
-          for file in "${TEX_FILES[@]}"; do
-            file=$(echo $file | xargs)
-            echo "Building: $file.tex"
-
-            if ! latexmk ${{ inputs.latex_options }} "$file.tex"; then
-              echo "::error::Failed to build $file.tex"
-              echo "LaTeX build failed. Check the logs above for details."
-              BUILD_FAILED=true
-              break
-            else
-              echo "✓ Successfully built $file.tex"
-            fi
-          done
-        fi
-
-        if [[ "$BUILD_FAILED" == "true" ]]; then
-          echo "::error::One or more LaTeX builds failed"
-          exit 1
-        fi
-
-        echo "::endgroup::"
-
-    - name: Check PDF files and cleanup
-      id: check_pdf
-      if: steps.prepare.outputs.existing_files == 'true'
-      shell: bash
-      run: |
-        echo "::group::Checking PDF files and cleanup"
-        IFS=',' read -ra TEX_FILES <<< "${{ steps.prepare.outputs.processed_files }}"
-        ALL_EXIST=true
-        PDF_FILES=""
-
-        for file in "${TEX_FILES[@]}"; do
-          file=$(echo $file | xargs)
-          if [ ! -f "$file.pdf" ]; then
-            echo "::error::PDF file not found: $file.pdf"
-            ALL_EXIST=false
-          else
-            echo "✓ Found PDF: $file.pdf"
-            PDF_FILES+="$file.pdf,"
-          fi
-        done
-
-        PDF_FILES=${PDF_FILES%,}
-        echo "all_exist=$ALL_EXIST" >> $GITHUB_OUTPUT
-        echo "pdf_files=$PDF_FILES" >> $GITHUB_OUTPUT
-
-        # Cleanup intermediate files if requested
-        if [[ "${{ inputs.cleanup }}" == "true" ]]; then
-          echo "Cleaning up intermediate files..."
-          for file in "${TEX_FILES[@]}"; do
-            file=$(echo $file | xargs)
-            # Remove common LaTeX intermediate files
-            rm -f "$file.aux" "$file.log" "$file.fls" "$file.fdb_latexmk" \
-                  "$file.synctex.gz" "$file.out" "$file.toc" "$file.lot" \
-                  "$file.lof" "$file.bbl" "$file.blg" "$file.idx" \
-                  "$file.ind" "$file.ilg" "$file.nav" "$file.snm" \
-                  "$file.vrb" "$file.figlist" "$file.makefile" \
-                  "$file.figlist.makefile" "$file.figlist.fls" \
-                  "$file.figlist.fdb_latexmk"
-          done
-          echo "Cleanup completed"
-        else
-          echo "Skipping cleanup (cleanup=false)"
-        fi
-
-        echo "::endgroup::"
-
-    - name: Create a release
-      if: steps.prepare.outputs.existing_files == 'true' && steps.check_pdf.outputs.all_exist == 'true'
-      uses: softprops/action-gh-release@v2
-      with:
-        files: ${{ steps.check_pdf.outputs.pdf_files }}
-        tag_name: ${{ format('{0}-release', github.head_ref || github.ref_name || format('release-{0}', github.run_number)) }}
-        name: ${{ inputs.release_name || format('{0} Release', github.head_ref || github.ref_name || format('Release {0}', github.run_number)) }}
-        draft: false
-        prerelease: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        generate_release_notes: true
-        make_latest: false
-        body: |
-          ## 📄 LaTeX Build Results
-
-          This release contains compiled PDF files from the following LaTeX sources:
-
-          **Built files:**
-          ${{ steps.prepare.outputs.processed_files }}
-
-          **Build options:** `${{ inputs.latex_options }}`
-          **Parallel build:** ${{ inputs.parallel }}
-          **Cleanup performed:** ${{ inputs.cleanup }}
-
-          ---
-
-          🤖 *This release was automatically generated by [LaTeX Release Action](https://github.com/smkwlab/latex-release-action)*
+  using: 'docker'
+  image: 'Dockerfile'
 
