--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -7,15 +7,18 @@ rules:
   truthy:
     allowed-values: ['true', 'false', 'on', 'off', 'yes', 'no']
     check-keys: false
-  
+
   # Relax line length for readable workflow comments
   line-length:
     max: 120
-    
-  # Require document start for consistency
-  document-start:
-    present: true
-    
+    level: warning
+
+  # Document start is optional (allow both with and without ---)
+  document-start: disable
+
+  # Be stricter about trailing spaces
+  trailing-spaces: enable
+
   # Ensure proper indentation
   indentation:
     spaces: 2
