--- a/.github/workflows/ai-reviewer.yml
+++ b/.github/workflows/ai-reviewer.yml
@@ -25,5 +25,6 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          MODEL_CODE: "models/gemini-2.5-flash"
           LANGUAGE: "Japanese"
           EXCLUDE_PATHS: "_build/**,deps/**,cover/**,log/**"
