Fix ai-reviewer workflow
- Change version from @v1.1 to @v1 (auto-update to latest v1.x)
- Remove redundant MODEL_CODE (default is now gemini-2.5-flash)
- Add API key check with environment variable for security
- Add graceful skip when GEMINI_API_KEY is not configured

--- a/.github/workflows/ai-reviewer.yml
+++ b/.github/workflows/ai-reviewer.yml
@@ -20,11 +20,23 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - name: Check GEMINI_API_KEY
+        id: check-key
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: |
+          if [ -z "$GEMINI_API_KEY" ]; then
+            echo "::notice::GEMINI_API_KEY is not configured. Skipping AI review."
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Gemini Review Bot
-        uses: toshi0806/ai-reviewer@v1.1
+        if: steps.check-key.outputs.skip != 'true'
+        uses: toshi0806/ai-reviewer@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          MODEL_CODE: "models/gemini-2.5-flash"
           LANGUAGE: "Japanese"
           EXCLUDE_PATHS: "_build/**,deps/**,cover/**,log/**"
